[package]
name = "iplookup"
version = "0.1.0"
edition = "2024"
description = "In-memory Longest Prefix Match (LPM) routing tables for IPv4 and IPv6, built on ipnetx."
license = "MIT"
repository = "https://github.com/dbrucknr/iplookup"
readme = "README.md"
keywords = ["ip", "network", "routing", "lpm", "cidr"]
categories = ["network-programming", "data-structures"]

[dependencies]
ipnetx = "0.2.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "lookup"
path = "benchmarks/lookup.rs"
harness = false
