[package]
name = "routemap"
version = "0.1.2"
edition = "2024"
rust-version = "1.86"
description = "Fast in-memory IP prefix routing tables for IPv4 and IPv6. Longest Prefix Match via stride-4 treebitmap, built on ipnetx."
license = "MIT"
repository = "https://github.com/dbrucknr/routemap"
readme = "README.md"
keywords = ["ip", "network", "routing", "lpm", "cidr", "treebitmap"]
categories = ["network-programming", "data-structures"]

[dependencies]
ipnetx = "0.2.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.8"
proptest = "1"

[[bench]]
name = "lookup"
path = "benchmarks/lookup.rs"
harness = false
